Fix spacing

--- a/projects/composition/src/app/components/service-docs-viewer/service-docs-viewer.component.scss
+++ b/projects/composition/src/app/components/service-docs-viewer/service-docs-viewer.component.scss
@@ -5,5 +5,6 @@
 
   strong {
     cursor: pointer;
+    margin-right: 2px;
   }
 }
